--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="navbar">
+	<nav class="navbar navbar-inverse" role="navigation">
+		<div class="container">
+		<a href="#" class="navbar-brand"> Treebook</a>
+		<ul class="nav navbar-nav">
+		<li><%= link_to "All Statuses", statuses_path %></li>
+		
+		</div>
+	</div>
+</div>
+<div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
